TBD
 - Optimization: Isolated the QSO tab to an independent widget.
 - Bugfix: When starting KLog for the first time, it crashed.

May 2021 - 1.5.3
- Bugfix: Fixes the DataBase update process to add the Q65 mode.
- Bugfix: Unexpected Setup dialog behavior. (Closes issue #178) (TNX foldynl)
- Bugfix: Time is not in UTC when "Log in real time" is uncheck. (Closes issue #179) (TNX foldynl)
- Bugfix: Missing translation in SoftwareUpdateDialog. (Closes issue #180) (TNX foldynl)
- Bugfix: Inconsistency text in Tip#2. (Closes issue #182) (TNX foldynl)
- Bugfix: Missing Translation string in SetupPageMisc::createUI. (Closes issue #185) (TNX foldynl)
- Bugfix: When LoTW service was no enabled, KLog insisted to show the QSOs to be exported.
- Bugfix: Setup->Satellites did not show a correct Short name. (Closes issue #192) (TNX foldynl)
- Bugfix: Removal DX Cluster unexpected disconnection. (TNX foldynl)
- Bugfix: Tip #21 was not shown. (Closes issue #184) (TNX foldynl)
- Bugfix: TQSL was not properly found on macOS. (Closes issue #195) (TNX K0JM)
- Enhancement: Improved the readability of the DX Cluster window. (TNX foldynl)
- Updated the KLog tips.
- Translation: Czech (TNX OK1MLG), Spanish.

May 2021 - 1.5.2
- Bugfix: Complex calls like K/EA4K/P were identified as wrong calls. (Closes issue #177) (TNX PA3FNT)

April 2021 - 1.5.1
- Added the GitHub repository to find new releases due to the issue with savannah.nongnu.org
- New feature: F4 toggles the real time status (on/off).
- Improvements on call identification  management on user input.
- Bugfix: Editing removes QTH and name (Closes issue #113)
- Bugfix: Some complex calls (i.e. F/EA4K) were causing a crash unders some conditions.
- Bugfix: DX Entity of some complex calls where not properly identified. (Closes issue #8).

March 2021 - 1.5
- Added the 8M & 5M bands.
- New feature: Added "Adif file deletion" checkbox. User can choose to show or not the message boxes after uploading QSOs.