@@ -1,6 +1,8 @@
 TBD
  - Optimization: Isolated the QSO tab to an independent widget.
  - Bugfix: When starting KLog for the first time, it crashed.
+ - Bugfix: Hamlib was not properly started on KLog start (closes issue #126) (TNX G4MKT)
+ - Enhanced how the UDP server is started on KLog start.
 
 May 2021 - 1.5.3
 - Bugfix: Fixes the DataBase update process to add the Q65 mode.
